created default layout for authenticated user

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
