--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "shadcn-vue": "^0.10.5",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
