--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
     "@vueuse/core": "^11.1.0",
+    "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.445.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.2.2",
     "radix-vue": "^1.9.6",
     "tailwind-merge": "^2.5.2",
