--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@headlessui/vue": "^1.7.23",
     "@iconify/vue": "^4.1.2",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.5",
