--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.0",
     "lucide-vue-next": "^0.445.0",
     "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.2.2",
