--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
+    "@internationalized/date": "^3.5.6",
     "@vueuse/core": "^11.1.0",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
