--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "lucide-vue-next": "^0.445.0",
     "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "radix-vue": "^1.9.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-toast-notification": "^3"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.23",
