--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vue-toast-notification": "^3"
+    "vue-toast-notification": "^3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.23",
