--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ APP_FIREBASE_STORAGEBUCKET=marketing-master-io-v3.appspot.com
 APP_FIREBASE_MESSAGINGSENDERID=833781394636
 APP_FIREBASE_APPID=1:833781394636:web:607fc819b054096281e669
 APP_FIREBASE_MEASUREMENTID=G-1E3LNXS38Z
+
+
+APP_FACEBOOK_ID=413988998236110
+APP_FACEBOOK_SECRET=247b7f90d0f171ed384d04b69fcd505f
