--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@heroicons/vue": "^2.1.5",
     "@internationalized/date": "^3.5.6",
     "@vueuse/core": "^11.1.0",
+    "axios": "^1.7.7",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
+    "install": "^0.13.0",
     "lucide-vue-next": "^0.445.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "npm": "^10.9.0",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.1.1",
     "radix-vue": "^1.9.6",
@@ -39,6 +42,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/facebook-js-sdk": "^3.3.12",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
