--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
     "@internationalized/date": "^3.5.6",
+    "@unovis/ts": "^1.4.4",
+    "@unovis/vue": "^1.4.4",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
