--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.1.1",
     "radix-vue": "^1.9.6",
+    "rete-render-utils": "^2.0.3",
+    "rete-vue-plugin": "^2.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.29",
