--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.445.0",
     "material-design-icons-iconfont": "^6.7.0",
     "npm": "^10.9.0",
@@ -35,6 +36,7 @@
     "rete": "^2.0.5",
     "rete-area-plugin": "^2.1.3",
     "rete-connection-plugin": "^2.0.5",
+    "rete-context-menu-plugin": "^2.0.4",
     "rete-render-utils": "^2.0.3",
     "rete-vue-plugin": "^2.1.1",
     "styled-components": "^6.1.13",
@@ -53,6 +55,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/facebook-js-sdk": "^3.3.12",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
