--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
     "@internationalized/date": "^3.5.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/vue-table": "^8.20.5",
     "@unovis/ts": "^1.4.4",
     "@unovis/vue": "^1.4.4",
