--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rete-area-plugin": "^2.1.3",
     "rete-connection-plugin": "^2.0.5",
     "rete-context-menu-plugin": "^2.0.4",
+    "rete-readonly-plugin": "^2.0.2",
     "rete-render-utils": "^2.0.3",
     "rete-vue-plugin": "^2.1.1",
     "styled-components": "^6.1.13",
